# cpp-exercism

./: .gitignore  CMakeLists.txt
Exercism/: #0 Hello world.cpp  LICENSE  README.md
Exercism/#1 Hello world/: hello_world.cpp
Exercism/#11 Election day/: election_day.cpp
Exercism/#13 Doctor Data/: doctor_data.cpp
Exercism/#14 Leap/: leap.cpp  leap.h
Exercism/#15 Reverse String/: reverse_string.cpp  reverse_string.h
Exercism/#16 Space Age/: space_age.cpp  space_age.h
Exercism/#3 Last Will/: last_will.cpp
Exercism/#4 Log levels/: log_levels.cpp
Exercism/#5 Freelancer rates/: freelancer_rates.cpp
Exercism/#6 Pacman Rules/: pacman_rules.cpp
Exercism/#7 Vehicle purchase/: vehicle_purchase.h
Exercism/#8 Interest is interesting/: interest_is_iteresting.cpp
Exercism/#9 Making the grade/: making_the_grade.cpp
Exercism/Exercism/#1 Hello world/: hello_world.h
Exercism/Exercism/#10 Ellen's Alien Game/: ellens_alien_game.cpp
Exercism/Exercism/#12 Troll the trolls/: troll_the_trolls.cpp
Exercism/Exercism/#13 Doctor Data/: doctor_data.h
Exercism/Exercism/#2 Lasagna/: lasagna.cpp
Exercism/Exercism/#7 Vehicle purchase/: vehicle_purchase.cpp
exec/: hello_world
