cmake_minimum_required(VERSION 3.27)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__
        "Exercism/#0 Hello world.cpp"
        "Exercism/#1 Hello world/hello_world.cpp"
        "Exercism/#2 Lasagna/lasagna.cpp"
        "Exercism/#3 Last Will/last_will.cpp"
        "Exercism/#4 Log levels/log_levels.cpp"
        "Exercism/#5 Freelancer rates/freelancer_rates.cpp"
        "Exercism/#6 Pacman Rules/pacman_rules.cpp"
        "Exercism/#7 Vehicle purchase/vehicle_purchase.cpp"
        "Exercism/#7 Vehicle purchase/vehicle_purchase.h"
        "Exercism/#8 Interest is interesting/interest_is_iteresting.cpp"
)
