cmake_minimum_required(VERSION 3.27)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__
        "Exercism/#0 Hello world.cpp"
        "Exercism/#1 Hello world/hello_world.cpp"
        "Exercism/#2 Lasagna/lasagna.cpp"
        "Exercism/#3 Last Will/last_will.cpp"
        "Exercism/#4 Log levels/log_levels.cpp"
        "Exercism/#5 Freelancer rates/freelancer_rates.cpp"
        "Exercism/#6 Pacman Rules/pacman_rules.cpp"
        "Exercism/#7 Vehicle purchase/vehicle_purchase.cpp"
        "Exercism/#7 Vehicle purchase/vehicle_purchase.h"
        "Exercism/#8 Interest is interesting/interest_is_iteresting.cpp"
        "Exercism/#9 Making the grade/making_the_grade.cpp"
        "Exercism/#10 Ellen's Alien Game/ellens_alien_game.cpp"
        "Exercism/#11 Election day/election_day.cpp"
        "Exercism/#12 Troll the trolls/troll_the_trolls.cpp"
        "Exercism/#13 Doctor Data/doctor_data.cpp"
        "Exercism/#13 Doctor Data/doctor_data.h"
        "Exercism/#14 Leap/leap.cpp"
        "Exercism/#14 Leap/leap.h"
        "Exercism/#15 Reverse String/reverse_string.cpp"
        "Exercism/#15 Reverse String/reverse_string.h"
        "Exercism/#16 Space Age/space_age.cpp"
        "Exercism/#16 Space Age/space_age.h"
)
